# civiltekk-ml-backend

./: README.md
app/: pyproject.toml
