[project]
name = "civiltekk-ml-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "darellchua2",email = "darellchua2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
